gcc/testsuite/rust/rustc/ui/issues/issue-12796.rs
trait Trait {
    fn outer(&self) {
        fn inner(_: &Self) {
// { dg-error ".E0401." "" { target *-*-* } .-1 }
        }
    }
}

fn main() { }

